--- a/Calculator/Calculator-1/index.html
+++ b/Calculator/Calculator-1/index.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculator</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="calculator">
-      <input type="text" placeholder="0" id="inputBox" readonly />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Calculator</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="calc-container">
+    <div class="display" id="display">0</div>
+    
+    <div class="buttons">
 
-      <div>
-        <button class="operator ac">AC</button>
-        <button class="operator del">DEL</button>
-        <button class="operator">%</button>
-        <button class="operator">/</button>
-      </div>
-      <div>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button class="operator">*</button>
-      </div>
-      <div>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button class="operator">-</button>
-      </div>
-      <div>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button class="operator">+</button>
-      </div>
+      <button onclick="clearDisplay()">C</button>
+      <button onclick="deleteLast()">DEL</button>
+      <button onclick="appendOperator('/')">/</button>
+      <button onclick="appendOperator('*')">×</button>
 
-      <div>
-        <button>00</button>
-        <button>0</button>
-        <button>.</button>
-        <button class="equalBtn">=</button>
-      </div>
+
+      <button onclick="appendNumber(7)">7</button>
+      <button onclick="appendNumber(8)">8</button>
+      <button onclick="appendNumber(9)">9</button>
+      <button onclick="appendOperator('-')">−</button>
+
+
+      <button onclick="appendNumber(4)">4</button>
+      <button onclick="appendNumber(5)">5</button>
+      <button onclick="appendNumber(6)">6</button>
+      <button onclick="appendOperator('+')">+</button>
+
+
+      <button onclick="appendNumber(1)">1</button>
+      <button onclick="appendNumber(2)">2</button>
+      <button onclick="appendNumber(3)">3</button>
+      <button onclick="calculateResult()">=</button>
+
+
+      <button onclick="appendNumber(0)">0</button>
+      <button onclick="appendNumber('.')">.</button>
     </div>
+  </div>
 
-    <script src="script.js"></script>
-  </body>
+  <script src="index.js"></script>
+</body>
 </html>
